# openvino_ngraph_api

./: CMakeLists.txt  README.md  bvlc_alexnet.caffemodel  bvlc_alexnet_quant.xml
include/: ir_weights.hpp  layer.hpp
src/: concat_layer.cpp  convolution_layer.cpp  detection_output_layer.cpp  fake_quantize_layer.cpp  flatten_layer.cpp  fully_connected_layer.cpp  ir_weights.cpp  layer.cpp  lrn_layer.cpp  main.cpp  permute_layer.cpp  pooling_layer.cpp  prior_box_layer.cpp  relu_layer.cpp  reshape_layer.cpp  softmax_layer.cpp
